syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message BattleEquipment {
	uint32 id = 1;
	uint32 level = 2;
	uint32 promotion = 3;
	uint32 rank = 4;
}

