syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

import "HeroBasicType.proto";
import "AvatarSkillTree.proto";

message HeroBasicTypeInfo {
    uint32 rank = 14;
    HeroBasicType basic_type = 4;
    repeated AvatarSkillTree skill_tree_list = 6;
}