syntax = "proto3";              
//Fenni

option java_package = "emu.lunarcore.proto";

message MonsterArchive {
	uint32 monster_id = 5;
	uint32 num = 4;
}
