syntax = "proto3";              
//Fenni
option java_package = "emu.lunarcore.proto";

import "BattleAvatar.proto";
import "BattleBuff.proto";
import "SceneMonsterWave.proto";
import "BattleTargetList.proto";
import "BattleEventBattleInfo.proto";

message SceneBattleInfo {
	repeated BattleEventBattleInfo event_battle_info_list = 131;
	repeated BattleAvatar pve_avatar_list = 2;
	uint32 logic_random_seed = 10;
	uint32 world_level = 5;
	repeated SceneMonsterWave monster_wave_list = 9;
	repeated BattleBuff buff_list = 8;
	uint32 battle_id = 7;
	uint32 rounds_limit = 15;
	uint32 stage_id = 1;
	map<uint32, BattleTargetList> battle_target_info = 1568;
}