syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message SceneMonsterWaveParam {
	uint32 level = 13;
	uint32 elite_group = 1;
	uint32 hard_level_group = 7;
	uint32 DNEAMPLLFME = 11;
}

